cargo-features = ["edition2021"]
[package]
name = "dots"
version = "0.3.5"
authors = ["AusCyber <willp@outlook.com.au>"]
repository = "https://github.com/auscyberman/dotfile-sync"
description = "a dotfile syncing software"
exclude = [
    ".github",
    "**.nix",
    "flake.lock",
]
readme = "README.md"

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.16"
tokio = { version = "1.10.0", features = ["full"] }
# git2 = "0.13"
anyhow = "1.0.38"
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
clap = "2.33.3"
structopt = { version = "0.3" }
directories = "3.0"
log = "0.4.14"
env_logger = "0.9.0"
regex = "1.4.5"
lazy_static = "1.4.0"
itertools = "0.10.0"
cascade = "1.0.0"
same-file = "1.0.6"
colored = "2"
derive_more = "0.99.16"
async-trait = "0.1.51"
petgraph = "0.6.0"
url = "2.2.2"
futures-util = "0.3.16"
