cargo-features = ["edition2021"]
[package]
name = "dots"
version = "0.3.5"
authors = ["AusCyber <willp@outlook.com.au>"]
repository = "https://github.com/auscyberman/dotfile-sync"
description = "a dotfile syncing software"
exclude = [
    ".github",
    "**.nix",
    "flake.lock",
]
readme = "README.md"

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.17"
tokio = { version = "1.11.0", features = ["full"] }
# git2 = "0.13"
anyhow = "1.0.44"
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
directories = "3.0"
log = "0.4.14"
env_logger = "0.9.0"
regex = "1.4.5"
lazy_static = "1.4.0"
itertools = "0.10.0"
cascade = "1.0.0"
same-file = "1.0.6"
colored = "2"
derive_more = "0.99.16"
async-trait = "0.1.51"
futures-util = "0.3.17"
clap_generate = "3.0.0-beta.4"
clap = "3.0.0-beta.4"


[patch.crates-io]
clap = { git = "https://github.com/clap-rs/clap" }
