[package]
name = "dots"
version = "0.3.6"
authors = ["AusCyber <willp@outlook.com.au>"]
repository = "https://github.com/auscyberman/dotfile-sync"
description = "a dotfile syncing software"
exclude = [
    ".github",
    "**.nix",
    "flake.lock",
]
readme = "README.md"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.18"
tokio = { version = "1.11.0", features = ["full"] }
# git2 = "0.13"
anyhow = "1.0.69"
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
directories = "4.0"
log = "0.4.14"
env_logger = "0.9.0"
regex = "1.4.5"
lazy_static = "1.4.0"
itertools = "0.10.0"
cascade = "1.0.0"
same-file = "1.0.6"
colored = "2"
derive_more = "0.99.16"
async-trait = "0.1.51"
futures-util = "0.3.18"
clap_generate = { version = "3.0.0-beta.5", git = "https://github.com/clap-rs/clap", rev = "3a697af253b5fdeeda7078cd247555d0ea7e6e37" }
clap = { version = "3.0.0-beta.5", git = "https://github.com/clap-rs/clap", rev = "3a697af253b5fdeeda7078cd247555d0ea7e6e37" }


[patch.crates-io]
